XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~
- Rewrote FTP API to no longer depend on ext/ftp
  http://news.xp-framework.net/article/298/2009/05/17/
  (friebe)
- Made scriptlet.xml.workflow.checkers.ParamChecker and 
  scriptlet.xml.workflow.casters.ParamCaster abstract.
  (kiesel)
- Deprecated global constants in scriptlet.xml.XMLScriptletResponse
  in favor of class constants
  (kiesel)
- Deprecated HTTP_* constants, use peer.http.HttpConstants class 
  constants instead.
  (kiesel)
- Removed net.xp_framework.website from ports (now resides in xpadmin
  repository, web/src)
  (friebe)
- Modified package mapping to also work from client to server in 
  remote.protocol.Serializer
  (gelli)

Bugfixes
~~~~~~~~
- Fixed image tags parsing in text.doclet.markup API for multiple 
  adjacent images
  (friebe)
- Fixed lang.reflect.Constructor::newInstance() check on instantiating
  an abstract class
  (kiesel, friebe)
- Fixed webservices.soap.xp.XPSoapNode class to not fatal when
  serializing stdClass objects.
  (kiesel)
- Fixed com.microsoft.com.COMObject class to work with PHP5 COM
  (friebe)
- Fixed lang.XPClass::getSimpleName() cutting off first character when 
  class name is unqualified
  (friebe)
- Fixed class names for soap generator
  (wagner)
- Fixed endless recursion in text.util.RandomCodeGenerator class
  (kiesel, Tom Geiger)
- Fixed text.util.RandomCodeGenerator not being able to generate codes
  longer than 44 characters
  (friebe)
- Added fix to catch submission of malicious request data in 
  scriptlet.xml.XMLScriptletResponse.
  (kiesel)
- Fixed typo in security.crypto.PrivateKey class
  (Thomas Geiger, Tobias Roth, kiesel)

Features
~~~~~~~~
- Added support for attributes to custom markup processors in 
  text.doclet.markup API
  (friebe)